# vllm-hidden-states-analysis

./: .gitignore  PLAN.md  README.md  pyproject.toml
classifier_models/meta-llama--Llama-3.1-8B-Instruct/: config.json
demo/: client.py  multi_client_demo.py
demo/qwen3_8b/: README.md  config.json
src/vllm_hidden_states_extractor/: __init__.py  attention.py  classifier.py  connector.py  model.py  utils.py
